# drift

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: change.rs  compare.rs  context.rs  lib.rs  operations.rs  path.rs  resolve.rs  schema.rs  setops.rs
tests/: test_changes.rs
tests/cases/cycle-shared-prefix/: base.json
tests/cases/cycle-shared-prefix/output/: change-item-value-type.out
tests/cases/cycle-shared-prefix/patch/: change-item-value-type.json
tests/cases/simple/: base.json  generated_openapi.yaml
tests/cases/simple/output/: add-cookie-parameter.out  add-default-response.out  add-header-parameter.out  add-operation-with-id.out  add-operation.out  add-optional-body.out  add-optional-parameter.out  add-required-body.out  add-required-parameter.out  add-response-code.out  add-schema-to-content.out  add-type-extension.out  additional-props-non-nullable-to-nullable.out  allof-ref-to-identical-type.out  allof-to-anyof.out  allof-to-oneof-with-type-change.out  allof-to-oneof.out  allof-to-ref-with-type-change.out  allof-to-ref.out  any-schema-change.out  anyof-to-allof.out  anyof-to-oneof.out  anyof-to-ref.out  array-items-add.out  array-items-non-nullable-to-nullable.out  array-items-remove.out  array-max-items-change.out  array-min-items-change.out  array-unique-items-change.out  body-description-change.out  body-extension-change.out  body-optional-to-required.out  body-required-to-optional.out  boolean-change.out  boolean-enum-change.out  change-default-response.out  change-header-parameter.out  change-operation-parameter-requirement.out  change-operation-parameter-type.out  change-property-type.out  (+76 more)
(+115 files in other folders)
