[package]
name = "drift"
version = "0.1.1"
description = "Library for comparing the compatibility of OpenAPI documents"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/oxidecomputer/drift"
rust-version = "1.85"
readme = "README.md"
documentation = "https://docs.rs/drift"

[dependencies]
anyhow = "1.0.99"
indexmap = "2.11.2"
openapiv3 = "2.2.0"
regex = "1.11.2"
serde = "1.0.225"
serde_json = "1.0.145"

[dev-dependencies]
json-patch = "4.1.0"
similar = "2.1.0"
expectorate = "1.2.0"
